--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -67,6 +67,7 @@ body {
   line-height: 1.6;
   background-color: var(--primary-background);
   color: var(--primary-font-color);
+  height: 100%;
 }
 
 p {
@@ -205,48 +206,49 @@ button:focus,
 }
 
 /* ------ NAVIGATION ------ */
-
-ul.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+#navbar {
   position: fixed;
-  top: 0;
   width: 100%;
+  top: 0;
+  transition: top 1s;
 }
 
-ul.topnav li {
+.top-nav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.top-nav a {
   float: left;
-}
-
-.topnav li a {
   display: block;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
 
-ul.topnav li a:hover:not(.active) {
-  background-color: #111;
+.top-nav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-ul.topnav li a.active {
+.top-nav a.active {
   background-color: #4caf50;
+  color: white;
 }
 
-ul.topnav li.right {
-  float: right;
+.top-nav .icon {
+  display: none;
 }
 
 .content {
-  margin-top: 4rem;
+  margin: 7rem 2.5rem 0;
 }
 
 .project-content {
   margin-top: 4rem;
+  height: 100%;
 }
 
 /* Required fields */
@@ -303,16 +305,13 @@ CSS you must add the (.) in order to pull up the specific (class). */
 }
 
 .logo-container {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  margin-bottom: -4px;
-  margin-right: 3px;
+  text-align: center;
+  padding: 1rem;
 }
 
 .foot-wrap {
   background-color: var(--secondary-color);
-  margin: 10px;
+  margin: 3rem 3rem 1.5rem;
   padding-bottom: 10px;
   border-radius: 4px;
 }
@@ -601,6 +600,7 @@ img.profile_portrait.rotate-picture {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -632,25 +632,49 @@ img.profile_portrait.rotate-picture {
 }
 
 /* ----- Navbar media Query ------ */
+
 @media screen and (max-width: 600px) {
-  ul.topnav li.right,
-  ul.topnav li {
+  .top-nav a:not(:first-child) {
+    display: none;
+  }
+
+  .top-nav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .top-nav.responsive {
+    position: relative;
+  }
+
+  .top-nav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .top-nav.responsive a {
     float: none;
+    display: block;
+    text-align: left;
   }
 }
 
 /* ------- content media query ------ */
 @media screen and (max-width: 600px) {
   .content {
-    margin-top: 18rem;
+    margin-top: 7rem;
   }
 }
 
 @media screen and (max-width: 600px) {
   .project-content {
-    margin-top: 21.5rem;
+    margin-top: 21rem;
   }
 }
+
 /* ------ work page mediaquery ------- */
 @media all and (min-width: 500px) and (max-width: 1024px) {
   .grid {
