--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -338,7 +338,7 @@ CSS you must add the (.) in order to pull up the specific (class). */
 
 .foot-wrap {
   background-color: var(--secondary-color);
-  margin: 3rem 3rem 1.5rem;
+  margin: 6%;
   padding-bottom: 10px;
   border-radius: 4px;
 }
